feat: adds search employees
