# app/rest/schema.go
@@ -24,3 +24,13 @@ type Employee struct {
 	Base `json:",inline"`
 	Name string `json:"name"`
 }
+
+type SearchEmployeesRequest struct {
+	PageToken string `json:"page_token" query:"page_token"`
+	PageSize  int    `json:"page_size" query:"page_size"`
+}
+
+type SearchEmployeesResponse struct {
+	Employees     []*Employee `json:"employees"`
+	NextPageToken string      `json:"next_page_token"`
+}
