# app/rest/service.go
@@ -70,3 +70,34 @@ func (t *RestService) FindEmployee(c *fiber.Ctx) error {
 
 	return c.Status(fiber.StatusOK).JSON(employee)
 }
+
+// SearchEmployees godoc
+// @Summary search employees
+// @ID searchEmployees
+// @Tags Employee
+// @Description Router for search employees
+// @Accept json
+// @Produce json
+// @Param page_size query int false "page size"
+// @Param page_token query string false "page token"
+// @Success 200 {object} SearchEmployeesResponse
+// @Failure 400 {object} HTTPResponse
+// @Failure 403 {object} HTTPResponse
+// @Router /employees [get]
+func (t *RestService) SearchEmployees(c *fiber.Ctx) error {
+	var req SearchEmployeesRequest
+
+	if err := c.QueryParser(&req); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(HTTPResponse{Msg: err.Error()})
+	}
+
+	employees, nextPageToken, err := t.Service.SearchEmployees(c.Context(), &req.PageToken, &req.PageSize)
+	if err != nil {
+		return c.Status(fiber.StatusForbidden).JSON(HTTPResponse{Msg: err.Error()})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"employees":       employees,
+		"next_page_token": nextPageToken,
+	})
+}
