# domain/entity/employee.go
@@ -6,6 +6,7 @@ import (
 	"github.com/asaskevich/govalidator"
 	"github.com/c-4u/pinned-employee/utils"
 	uuid "github.com/satori/go.uuid"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 func init() {
@@ -13,13 +14,16 @@ func init() {
 }
 
 type Employee struct {
-	Base `json:",inline" valid:"-"`
-	Name *string `json:"name" gorm:"column:name;not null" valid:"required"`
+	Base  `json:",inline" valid:"-"`
+	Name  *string `json:"name" gorm:"column:name;not null" valid:"required"`
+	Token *string `json:"-" gorm:"column:token;type:varchar(25);not null" valid:"-"`
 }
 
 func NewEmployee(name *string) (*Employee, error) {
+	token := primitive.NewObjectID().Hex()
 	e := Employee{
-		Name: name,
+		Name:  name,
+		Token: &token,
 	}
 	e.ID = utils.PString(uuid.NewV4().String())
 	e.CreatedAt = utils.PTime(time.Now())
@@ -35,4 +39,21 @@ func NewEmployee(name *string) (*Employee, error) {
 func (e *Employee) IsValid() error {
 	_, err := govalidator.ValidateStruct(e)
 	return err
+}
+
+type SearchEmployees struct {
+	Pagination `json:",inline" valid:"-"`
+}
+
+func NewSearchEmployees(pagination *Pagination) (*SearchEmployees, error) {
+	e := SearchEmployees{}
+	e.PageToken = pagination.PageToken
+	e.PageSize = pagination.PageSize
+
+	err := e.IsValid()
+	if err != nil {
+		return nil, err
+	}
+
+	return &e, nil
 }
