# domain/repo/repo_interface.go
@@ -10,6 +10,7 @@ type RepoInterface interface {
 	CreateEmployee(ctx context.Context, employee *entity.Employee) error
 	FindEmployee(ctx context.Context, employeeID *string) (*entity.Employee, error)
 	SaveEmployee(ctx context.Context, employee *entity.Employee) error
+	SearchEmployees(ctx context.Context, searchEmployees *entity.SearchEmployees) ([]*entity.Employee, *string, error)
 
 	PublishEvent(ctx context.Context, topic, msg, key *string) error
 }
